--- a/src/View/main.twig.html
+++ b/src/View/main.twig.html
@@ -24,12 +24,9 @@
             <div>
                 <div>
                     <img src="{{post.photo}}">
-                    <p>{{post.photo}}"</p>>
                 </div>
                 <div>
-                    <p>
-                        {{post.description}}
-                    </p>
+                    <p>{{post.description}}</p>
                 </div>
 
             </div>
