--- a/web/resources/css/main.css
+++ b/web/resources/css/main.css
@@ -58,6 +58,12 @@ hr.small {
     text-transform: uppercase;
     font-size: 12px;
 }
+
+.container {
+    border: 1px solid #777777;
+    border-radius: 5px;
+}
+
 .navbar-custom .nav li a {
     text-transform: uppercase;
     font-size: 12px;
@@ -408,3 +414,4 @@ body {
 footer {
     margin: 50px 0;
 }
+
