--- a/src/View/main.twig.html
+++ b/src/View/main.twig.html
@@ -24,14 +24,14 @@
     <div class="row">
         <div class="col-md-12" align="center">
             <h3>All Posts</h3>
-            <h5>Posts count: {{ numberOfPosts }}</h5>
+            <h5>Posts count: {{ numberOfPosts }}</h5><br>
             {% for post in posts|reverse %}
-            <div>
-                <div>
+            <div class="content_block">
+                <div class="img_con">
                     <img src="{{post.photo}}">
                 </div>
                 <div>
-                    <p>{{post.description}}</p>
+                    <p><b>Description: </b>{{post.description}}</p>
                 </div>
 
             </div>
